# cmToolKit-old

./: CMakeLists.txt  README.md
cmake/Modules/: __builtin_bswap.cmake  __builtin_clz.cmake  __builtin_expect.cmake  __builtin_unreachable.cmake  buildExecutables.cmake  buildLibraries.cmake  buildLibraries.cmake.bak  buildPkgconfigPc.cmake  buildPkgconfigPc.cmake.full  ccache.cmake  checkCompilerFlags.cmake  checkFunction.cmake  checkHeader.cmake  checkHeaders.cmake  checkPragmaDiagnostics.c  checkPragmaDiagnostics.cmake  checkSymbol.cmake  checkSymbols.cmake  checkType.cmake  configurationReport.cmake  defaultCompilerFlags.cmake  fastTypesLengthsMatch.cmake  getProgramVersion.cmake  haveBrokenSizeMax.cmake  inlineAttr.cmake  installDirectories.cmake  installDirectories.cmake.old  isoHeaders.cmake  isohdrs.cmake  needLibCrypt.cmake  needLibDl.cmake  needLibM.cmake  needLibNsl.cmake  needLibPthread.cmake  needLibResolv.cmake  needLibRt.cmake  needLibSocket.c  needLibSocket.cmake  pathconf.cmake  pkgConfig.cmake  (+9 more)
cmake/Templates/: cmake_uninstall.cmake.in  isoHeaders.h.in  isohdrs.h.in  model-config.in  package-config.in  pkgconfig.pc.in  pkgconfig.sh.in
snippets/: _bash_profile  _bash_profile_alt  _cmake  _cmake_fast  _gmake  _hdrcheck  _stdmodes  _zprofile  _zshrc  collect.sh  hdrcheck.sh  isohdrs.rex  path.here.bash  path.remove.bash  rxdiff.rex
tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  vars_for_main_at_exit.txt
